Add Soil Proposal Component
* Shared among all three soil types
* Add ha to ALR Area label

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/pfrs-details/pfrs-details.component.html
@@ -126,6 +126,18 @@
     {{ _applicationSubmission.soilProjectDurationAmount }}
   </div>
 
+  <div class="subheading2 grid-1">
+    What alternative measures have you considered or attempted before proposing to place fill?
+  </div>
+  <div class="grid-double">
+    <span>{{ _applicationSubmission.soilAlternativeMeasures }}</span>
+  </div>
+
+  <div class="subheading2 grid-1">Describe the type, origin and quality of fill proposed to be placed.</div>
+  <div class="grid-double">
+    <span>{{ _applicationSubmission.soilFillTypeToPlace }}</span>
+  </div>
+
   <div class="subheading2 grid-1">Describe the type of soil proposed to be removed.</div>
   <div class="grid-double">
     <span>{{ _applicationSubmission.soilTypeRemoved }}</span>
