--- a/alcs-frontend/src/app/features/application/proposal/nfu/nfu.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/nfu/nfu.component.html
@@ -17,7 +17,7 @@
 <div>
   <div class="subheading2">Use End Date</div>
   <app-inline-datepicker
-    [value]="application?.nfuEndDate"
-    (save)="updateApplicationValue('nfuEndDate', $event)"
+    [value]="application?.proposalEndDate"
+    (save)="updateApplicationValue('proposalEndDate', $event)"
   ></app-inline-datepicker>
 </div>
