--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -156,6 +156,10 @@ body {
   margin: 0;
 }
 
+.mat-typography {
+  font-size: 16px;
+}
+
 .mat-dialog-override {
   mat-dialog-container {
     padding: 32px;
