--- a/alcs-frontend/src/app/features/application/proposal/proposal.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/proposal.component.html
@@ -3,7 +3,7 @@
   <h5>Proposal Components - {{ application?.type?.label }}</h5>
   <div class="input-table">
     <div>
-      <div class="subheading2">ALR Area</div>
+      <div class="subheading2">ALR Area (ha)</div>
       <app-inline-number [value]="alrArea" (save)="onSaveAlrArea($event)"></app-inline-number>
     </div>
     <div>
@@ -39,6 +39,9 @@
   </div>
   <app-proposal-nfu *ngIf="application && application.type.code === 'NFUP'"></app-proposal-nfu>
   <app-proposal-subd *ngIf="application && application.type.code === 'SUBD'"></app-proposal-subd>
+  <app-proposal-soil
+    *ngIf="application && ['POFO', 'ROSO', 'PFRS'].includes(application.type.code)"
+  ></app-proposal-soil>
 </section>
 <section>
   <h5>Staff Comments and Observations</h5>
