Fix NOI Card Sorting, show active days on cards

--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -34,7 +34,7 @@
     <div class="lower-card">
       <div>
         <div
-          *ngIf="cardData.cardType === 'APP'"
+          *ngIf="cardData.activeDays !== undefined"
           class="active-days center"
           matTooltip="Active days: {{ cardData.activeDays }} "
         >
