NOI Modifications Bug Fixes
* Show Modification outcome and Received all items on timeline
* Remove Create Covenant and Create Recon from NOI Board
* Show noi modifications cards in modification header
* Hook up NOI_MODI Card type to changes

--- a/alcs-frontend/src/app/features/board/board.component.html
+++ b/alcs-frontend/src/app/features/board/board.component.html
@@ -9,7 +9,11 @@
     <div>
       <ng-container
         *ngIf="
-          boardHasCreatePlanningReview || boardHasCreateAppModification || boardHasCreateCovenant || boardHasCreateNOI
+          boardHasCreatePlanningReview ||
+          boardHasCreateAppModification ||
+          boardHasCreateCovenant ||
+          boardHasCreateNOI ||
+          boardHasCreateNOIModification
         "
       >
         <button mat-flat-button color="primary" [matMenuTriggerFor]="createMenu">+ New Card ▾</button>
