--- a/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
@@ -4,7 +4,7 @@
       heading="Notice of Intent"
       [application]="noticeOfIntent"
       [reconsiderations]="[]"
-      [modifications]="[]"
+      [modifications]="modifications"
       days="Calendar Days"
     ></app-details-header>
     <div class="content">
