--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -30,9 +30,7 @@
       <div class="loading-overlay" *ngIf="decision.loading">
         <mat-spinner></mat-spinner>
       </div>
-      <div
-        class="decision"
-      >
+      <div class="decision">
         <div *ngIf="decision.modifiedBy?.length || decision.reconsideredBy?.length" class="post-decisions body-text">
           <div>
             <strong>Modified&nbsp;By:&nbsp;</strong>
@@ -177,35 +175,36 @@
               <div class="subheading1 decision-content">
                 {{ component.applicationDecisionComponentType?.label }} Component
               </div>
-              <div class="decision-content grid-3">
-                <div>
-                  <div class="subheading2">ALR Area Impacted (ha)</div>
-                  <app-inline-number
-                    [value]="component?.alrArea?.toString()"
-                    (save)="onSaveAlrArea(decision.uuid, component.uuid!, $event)"
-                  ></app-inline-number>
-                </div>
-                <div>
-                  <div class="subheading2">Agri Cap</div>
-                  {{ component.agCap }}
-                </div>
-                <div>
-                  <div class="subheading2">Agri Cap Source</div>
-                  {{ component.agCapSource }}
+              <div class="decision-content">
+                <div class="grid-3 decision-content">
+                  <div>
+                    <div class="subheading2">ALR Area Impacted (ha)</div>
+                    <app-inline-number
+                      [value]="component?.alrArea?.toString()"
+                      (save)="onSaveAlrArea(decision.uuid, component.uuid!, $event)"
+                    ></app-inline-number>
+                  </div>
+                  <div>
+                    <div class="subheading2">Agri Cap</div>
+                    {{ component.agCap }}
+                  </div>
+                  <div>
+                    <div class="subheading2">Agri Cap Source</div>
+                    {{ component.agCapSource }}
+                  </div>
                 </div>
 
-                <div>
-                  <div class="subheading2">Non-Farm Use Type</div>
-                  {{ component.nfuType }}
-                </div>
-                <div>
-                  <div class="subheading2">Non-Farm Use Sub-Type</div>
-                  {{ component.nfuSubType }}
-                </div>
-                <div>
-                  <div class="subheading2">Use End Date</div>
-                  {{ component.nfuEndDate }}
-                </div>
+                <app-nfup
+                  class="grid-3"
+                  *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.NFUP"
+                  [component]="component"
+                ></app-nfup>
+
+                <app-turp
+                  class="grid-3"
+                  *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.TURP"
+                  [component]="component"
+                ></app-turp>
               </div>
             </div>
           </div>
