Add Naru Proposal
* Only single subtype selector for now

--- a/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
@@ -138,6 +138,13 @@
         (navigateToStep)="onBeforeSwitchStep($event)"
         (exit)="onExit()"
       ></app-pfrs-proposal>
+      <app-naru-proposal
+        *ngIf="applicationSubmission.typeCode === 'NARU'"
+        [$applicationSubmission]="$applicationSubmission"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+        (exit)="onExit()"
+      ></app-naru-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
