--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/nfup/nfup.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/nfup/nfup.component.html
@@ -8,5 +8,5 @@
 </div>
 <div>
   <div class="subheading2">Use End Date</div>
-  {{ component.nfuEndDate | date}}
+  {{ component.endDate | date }}
 </div>
