--- a/alcs-frontend/src/app/features/application/decision/decision-v1/decision-v1-dialog/decision-v1-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v1/decision-v1-dialog/decision-v1-dialog.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-  <h2 class="card-title">{{ isEdit ? 'Edit' : 'New' }} Decision</h2>
+  <h2 class="card-title">{{ isEdit ? 'Edit' : 'Create' }} Decision</h2>
 </div>
 <form (ngSubmit)="onSubmit()" [formGroup]="form">
   <mat-dialog-content style="height: 100%">
