--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -57,10 +57,14 @@
   </div>
 
   <div class="row-no-flex">
-    <app-nfu-input *ngIf="data.applicationDecisionComponentTypeCode === 'NFUP'" [form]="form"></app-nfu-input>
+    <app-nfu-input *ngIf="data.applicationDecisionComponentTypeCode === COMPONENT_TYPE.NFUP" [form]="form"></app-nfu-input>
   </div>
 
   <div class="row-no-flex">
-    <app-turp-input *ngIf="data.applicationDecisionComponentTypeCode === 'TURP'" [form]="form"></app-turp-input>
+    <app-turp-input *ngIf="data.applicationDecisionComponentTypeCode === COMPONENT_TYPE.TURP" [form]="form"></app-turp-input>
+  </div>
+
+  <div class="row-no-flex">
+    <app-pofo-input *ngIf="data.applicationDecisionComponentTypeCode === COMPONENT_TYPE.POFO" [form]="form"></app-pofo-input>
   </div>
 </form>
