--- a/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
@@ -59,7 +59,7 @@
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.PrimaryContact">
       <app-primary-contact
         [showErrors]="showValidationErrors"
-        [$application]="$applicationSubmission"
+        [$applicationSubmission]="$applicationSubmission"
         [$applicationDocuments]="$applicationDocuments"
         (navigateToStep)="onBeforeSwitchStep($event)"
         (exit)="onExit()"
