--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/colors';
+@use '../../../styles/typography';
 
 .avatar-circle {
   border-radius: 50%;
@@ -12,7 +13,7 @@
 }
 
 .avatar-circle.large {
-  font-size: 18px;
+  @extend .subheading1;
   width: 45px;
   height: 45px;
 }
