tidy decision component fields

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/turp-input/turp-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/turp-input/turp-input.component.html
@@ -4,13 +4,13 @@
       <mat-label>Expiry Date</mat-label>
       <input
         matInput
-        (click)="endDatePicker.open()"
-        [matDatepicker]="endDatePicker"
-        formControlName="endDate"
+        (click)="expiryDatePicker.open()"
+        [matDatepicker]="expiryDatePicker"
+        formControlName="expiryDate"
         name="date"
       />
-      <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-      <mat-datepicker #endDatePicker type="date"></mat-datepicker>
+      <mat-datepicker-toggle matSuffix [for]="expiryDatePicker"></mat-datepicker-toggle>
+      <mat-datepicker #expiryDatePicker type="date"></mat-datepicker>
     </mat-form-field>
   </div>
 </form>
