--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
@@ -1,1 +1,17 @@
-<p>pofo-input works!</p>
+<form [formGroup]="form" class="pofo-component-form">
+    <div class="grid-3">
+      <mat-form-field appearance="outline" class="date-picker">
+        <mat-label>Use End Date</mat-label>
+        <input
+          matInput
+          (click)="endDatePicker.open()"
+          [matDatepicker]="endDatePicker"
+          formControlName="endDate"
+          name="date"
+        />
+        <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+        <mat-datepicker #endDatePicker type="date"></mat-datepicker>
+      </mat-form-field>
+    </div>
+  </form>
+  
