--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
@@ -13,7 +13,7 @@
 }
 
 .avatar-circle.large {
-  @extend .subheading1;
-  width: 45px;
-  height: 45px;
+  @extend .body-text;
+  width: 40px;
+  height: 40px;
 }
