--- a/alcs-frontend/src/app/features/board/dialogs/card-dialog/card-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/card-dialog/card-dialog.component.scss
@@ -4,7 +4,7 @@
   color: colors.$grey;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   margin: -32px 0 12px;
 }
 
