Change font in user dropdown menu

--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -62,10 +62,10 @@
           </div>
           <hr />
           <div *ngIf="isAdmin" class="avatar-menu-items">
-            <button (click)="onAdmin()">Admin</button>
+            <button mat-menu-item (click)="onAdmin()">Admin</button>
           </div>
           <div class="avatar-menu-items">
-            <button (click)="onLogout()">Log Out</button>
+            <button mat-menu-item (click)="onLogout()">Log Out</button>
           </div>
         </mat-menu>
       </div>
