Fixes to typography-related UI bugs (#701)
* Update font and component size for avatar and cards

* Shrink header avatar and side nav

* Lower card class to be closer to rest of heading

* Change font in user dropdown menu

--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/colors';
+@use '../../../styles/typography';
 
 .avatar-circle {
   border-radius: 50%;
@@ -12,7 +13,7 @@
 }
 
 .avatar-circle.large {
-  font-size: 18px;
-  width: 45px;
-  height: 45px;
+  @extend .body-text;
+  width: 40px;
+  height: 40px;
 }
