--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
@@ -1,17 +1,105 @@
 <form [formGroup]="form" class="pofo-component-form">
-    <div class="grid-3">
-      <mat-form-field appearance="outline" class="date-picker">
-        <mat-label>Use End Date</mat-label>
-        <input
-          matInput
-          (click)="endDatePicker.open()"
-          [matDatepicker]="endDatePicker"
-          formControlName="endDate"
-          name="date"
-        />
-        <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-        <mat-datepicker #endDatePicker type="date"></mat-datepicker>
-      </mat-form-field>
+  <div class="grid-3">
+    <mat-form-field appearance="outline" class="date-picker">
+      <mat-label>Use End Date</mat-label>
+      <input
+        matInput
+        (click)="endDatePicker.open()"
+        [matDatepicker]="endDatePicker"
+        formControlName="endDate"
+        name="date"
+      />
+      <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+      <mat-datepicker #endDatePicker type="date"></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" class="full-width">
+      <textarea
+        formControlName="fillTypeToPlace"
+        #fillTypeToPlaceText
+        maxlength="4000"
+        id="fillTypeToPlace"
+        matInput
+        placeholder="Type, origin and quality of fill approved to be placed"
+      ></textarea>
+    </mat-form-field>
+  </div>
+
+  <div class="container">
+    <div class="soil-table">
+      <div></div>
+      <div>
+        <label for="volume">Fill to be placed</label>
+      </div>
+      <div class="label">
+        <label for="volume">Volume</label>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="full-width">
+          <input
+            min="0.01"
+            id="volume"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="volume"
+          />
+          <span matTextSuffix>m<sup>3</sup></span>
+        </mat-form-field>
+      </div>
+      <div class="label">
+        <label for="area">Area</label>
+        <div class="subtext">Note: 0.01 ha is 100m2</div>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="full-width">
+          <input
+            min="0.01"
+            id="area"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="area"
+          />
+          <span matTextSuffix>ha</span>
+        </mat-form-field>
+      </div>
+      <div class="label">
+        <label for="volume">Maximum Depth</label>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="full-width">
+          <input
+            min="0.01"
+            id="maximumDepth"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="maximumDepth"
+          />
+          <span matTextSuffix>m</span>
+        </mat-form-field>
+      </div>
+      <div class="label">
+        <label for="volume">Average Depth</label>
+      </div>
+      <div>
+        <mat-form-field appearance="outline" class="full-width">
+          <input
+            min="0.01"
+            id="averageDepth"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="averageDepth"
+          />
+          <span matTextSuffix>m</span>
+        </mat-form-field>
+      </div>
     </div>
-  </form>
-  
+  </div>
+</form>
