--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
@@ -1,1 +1,34 @@
-<p>pofo works!</p>
+<div>
+  <div class="subheading2" class="full-width">Use End Date</div>
+  {{ component.endDate | date }}
+</div>
+<div class="full-width">
+  <div class="subheading2">Type, origin and quality of fill proposed to be placed.</div>
+  <div class="pre-wrapped-text">{{ component.soilFillTypeToPlace }}</div>
+</div>
+<div class="full-width">
+  <table>
+    <thead>
+      <th></th>
+      <th *ngIf="component.soilToPlaceVolume !== null">Fill to be Placed</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="soil-table-label">Volume</td>
+        <td>{{ component.soilToPlaceVolume }} m<sup>3</sup></td>
+      </tr>
+      <tr>
+        <td class="soil-table-label">Area</td>
+        <td>{{ component.soilToPlaceArea }} ha</td>
+      </tr>
+      <tr>
+        <td class="soil-table-label">Maximum Depth</td>
+        <td>{{ component.soilToPlaceMaximumDepth }} m</td>
+      </tr>
+      <tr>
+        <td class="soil-table-label">Average Depth</td>
+        <td>{{ component.soilToPlaceAverageDepth }} m</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
