--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
@@ -15,6 +15,7 @@
 
     <mat-form-field appearance="outline" class="full-width">
       <textarea
+        class="soil-text-area"
         formControlName="fillTypeToPlace"
         #fillTypeToPlaceText
         maxlength="4000"
