--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -211,6 +211,12 @@
                   *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.POFO"
                   [component]="component"
                 ></app-pofo>
+
+                <app-roso
+                  class="grid-3"
+                  *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.ROSO"
+                  [component]="component"
+                ></app-roso>
               </div>
             </div>
           </div>
