pfrs decision component

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/roso/roso.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/roso/roso.component.html
@@ -10,7 +10,7 @@
   <table>
     <thead>
       <th></th>
-      <th *ngIf="component.soilToPlaceVolume !== null">Fill to be Placed</th>
+      <th>Soil to be Removed</th>
     </thead>
     <tbody>
       <tr>
