--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -82,4 +82,10 @@
       [form]="form"
     ></app-roso-input>
   </div>
+  <div class="row-no-flex">
+    <app-pfrs-input
+      *ngIf="data.applicationDecisionComponentTypeCode === COMPONENT_TYPE.PFRS"
+      [form]="form"
+    ></app-pfrs-input>
+  </div>
 </form>
