--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/roso-input/roso-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/roso-input/roso-input.component.html
@@ -20,7 +20,7 @@
         #fillTypeToPlaceText
         maxlength="4000"
         matInput
-        placeholder="Type of soil approved to be removed."
+        placeholder="Type of soil approved to be removed*"
       ></textarea>
     </mat-form-field>
   </div>
@@ -29,10 +29,10 @@
     <div class="soil-table">
       <div></div>
       <div>
-        <label for="volume">Soil to be Removed</label>
+        <label for="volume">Soil to be Removed*</label>
       </div>
       <div class="label">
-        <label for="volume">Volume</label>
+        <label for="volumeToRemove">Volume</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -42,13 +42,13 @@
             thousandSeparator=","
             separatorLimit="9999999999"
             matInput
-            formControlName="volume"
+            formControlName="volumeToRemove"
           />
           <span matTextSuffix>m<sup>3</sup></span>
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="area">Area</label>
+        <label for="areaToRemove">Area</label>
         <div class="subtext">Note: 0.01 ha is 100m2</div>
       </div>
       <div>
@@ -59,13 +59,13 @@
             thousandSeparator=","
             separatorLimit="9999999999"
             matInput
-            formControlName="area"
+            formControlName="areaToRemove"
           />
           <span matTextSuffix>ha</span>
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="volume">Maximum Depth</label>
+        <label for="maximumDepthToRemove">Maximum Depth</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -75,13 +75,13 @@
             thousandSeparator=","
             separatorLimit="9999999999"
             matInput
-            formControlName="maximumDepth"
+            formControlName="maximumDepthToRemove"
           />
           <span matTextSuffix>m</span>
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="volume">Average Depth</label>
+        <label for="averageDepthToRemove">Average Depth</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -91,7 +91,7 @@
             thousandSeparator=","
             separatorLimit="9999999999"
             matInput
-            formControlName="averageDepth"
+            formControlName="averageDepthToRemove"
           />
           <span matTextSuffix>m</span>
         </mat-form-field>
