--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -217,6 +217,12 @@
                   *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.ROSO"
                   [component]="component"
                 ></app-roso>
+
+                <app-pfrs
+                  class="grid-3"
+                  *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.PFRS"
+                  [component]="component"
+                ></app-pfrs>
               </div>
             </div>
           </div>
