populate pfrs|pofo|roso fields from submission

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pfrs-input/pfrs-input.component.html
@@ -40,13 +40,13 @@
     <div class="soil-table double-table">
       <div></div>
       <div>
-        <label for="volume">Soil to be Removed*</label>
+        <label for="volume">Soil to be Removed</label>
       </div>
       <div>
-        <label for="volume">Fill to be placed*</label>
+        <label for="volume">Fill to be placed</label>
       </div>
       <div class="label">
-        <label for="volumeToRemove">Volume</label>
+        <label for="volumeToRemove">Volume*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -75,7 +75,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="areaToRemove">Area</label>
+        <label for="areaToRemove">Area*</label>
         <div class="subtext">Note: 0.01 ha is 100m2</div>
       </div>
       <div>
@@ -105,7 +105,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="maximumDepthToRemove">Maximum Depth</label>
+        <label for="maximumDepthToRemove">Maximum Depth*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -134,7 +134,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="averageDepthToRemove">Average Depth</label>
+        <label for="averageDepthToRemove">Average Depth*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
