--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/pofo-input/pofo-input.component.html
@@ -29,10 +29,10 @@
     <div class="soil-table">
       <div></div>
       <div>
-        <label for="volume">Fill to be placed*</label>
+        <label for="volume">Fill to be placed</label>
       </div>
       <div class="label">
-        <label for="volumeToPlace">Volume</label>
+        <label for="volumeToPlace">Volume*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -48,7 +48,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="areaToPlace">Area</label>
+        <label for="areaToPlace">Area*</label>
         <div class="subtext">Note: 0.01 ha is 100m2</div>
       </div>
       <div>
@@ -65,7 +65,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="maximumDepthToPlace">Maximum Depth</label>
+        <label for="maximumDepthToPlace">Maximum Depth*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -81,7 +81,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="averageDepthToPlace">Average Depth</label>
+        <label for="averageDepthToPlace">Average Depth*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
