--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
@@ -1,5 +1,5 @@
-<div>
-  <div class="subheading2" class="full-width">Use End Date</div>
+<div class="full-width">
+  <div class="subheading2">Use End Date</div>
   {{ component.endDate | date }}
 </div>
 <div class="full-width">
