--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/roso-input/roso-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/roso-input/roso-input.component.html
@@ -29,10 +29,10 @@
     <div class="soil-table">
       <div></div>
       <div>
-        <label for="volume">Soil to be Removed*</label>
+        <label for="volume">Soil to be Removed</label>
       </div>
       <div class="label">
-        <label for="volumeToRemove">Volume</label>
+        <label for="volumeToRemove">Volume*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -48,7 +48,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="areaToRemove">Area</label>
+        <label for="areaToRemove">Area*</label>
         <div class="subtext">Note: 0.01 ha is 100m2</div>
       </div>
       <div>
@@ -65,7 +65,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="maximumDepthToRemove">Maximum Depth</label>
+        <label for="maximumDepthToRemove">Maximum Depth*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
@@ -81,7 +81,7 @@
         </mat-form-field>
       </div>
       <div class="label">
-        <label for="averageDepthToRemove">Average Depth</label>
+        <label for="averageDepthToRemove">Average Depth*</label>
       </div>
       <div>
         <mat-form-field appearance="outline" class="full-width">
