api validation on release and unit tests, component types in decision edit mode

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -1,3 +1,4 @@
+<div class="subheading1">{{ data.applicationDecisionComponentType?.label }} Component</div>
 <form [formGroup]="form" class="decision-component-form">
   <div class="grid-3">
     <mat-form-field appearance="outline">
