--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -134,4 +134,13 @@
   .soil-text-area {
     height: 100px !important;
   }
+
+  .subheading1 {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
+    font-size: 19px !important;
+    font-weight: 400 !important;
+    line-height: 24px;
+    color: #565656 !important;
+    margin: 24px 0 !important;
+  }
 }
